Fix post-tags margin issue on mobile
Added margin: 0 to .post-tags class to ensure consistent styling
between local and production environments. This resolves the issue
where browser default margins for div elements were causing
inconsistent spacing.

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -234,6 +234,7 @@ html {
   }
 
   .post-tags {
+    margin: 0;
     padding-right: 150px;
 
     @include media-query($on-palm) {
